# btc_agentic_system

./: .gitignore  README.md  pyproject.toml  research_abstract.md  research_explain.md
.omc/state/: agent-replay-9236a86d-8b3d-4d27-9cc9-2a9cff86587c.jsonl  last-tool-error.json  subagent-tracking.json
agentic/: __init__.py
agentic/strategies/: ema_trend.py  xgb_momentum.py
scripts/: run_benchmark.py
